<resources>
    <string name="app_name">Klukva</string>

    <string name="name">KLUKVA</string>
    <string name="name_of_language">EN</string>

    <string name="user_name">Name</string>
    <string name="user_login">Login</string>
    <string name="user_password">Password</string>

    <string name="user_name_hint">Enter a name</string>
    <string name="user_login_hint">Enter a phone number</string>
    <string name="user_password_hint">Enter a password</string>

    <string name="license">By registering, you agree to the Privacy Policy and Terms of Use</string>
    <string name="ok">OK</string>
    <string name="registration_already">Already registered? Enter</string>

    <string name="forgot_password">Forgot password</string>
    <string name="dont_have_an_account_yet_register">Don\'t have an account yet? Register</string>

    <string name="data">Data</string>
    <string name="time">Time</string>
    <string name="duration">Duration</string>
    <string name="find_options">Find options</string>

    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>

    <string name="Menu">Menu</string>
    <string name="Poke">Poke</string>
    <string name="Soups">Soups</string>
    <string name="Main_Dishes">Main dishes</string>
    <string name="Salads">Salads</string>
    <string name="Snacks">Snacks</string>
    <string name="Wok">Wok</string>
    <string name="Sauces">Sauces</string>
    <string name="Desserts">Desserts</string>
    <string name="Drinks">Drinks</string>

    <string name="All">All</string>
    <string name="Positive">Positive</string>
    <string name="Negative">Negative</string>
    <string name="Average_Rating">Average rating</string>
    <string name="Number_Of_Reviews">Number of reviews</string>

    <string name="PreOrder">PreOrder</string>
    <string name="ToBook">To Book</string>
</resources>