<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/custom_view_pager_shape"
	tools:ignore="ContentDescription">

	<TextView
		android:id="@+id/textViewMenu"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="22dp"
		android:layout_marginTop="11dp"
		android:text="@string/Menu"
		android:textColor="@color/black"
		android:textSize="16sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TableLayout
		android:id="@+id/tableLayout"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="5dp"
		android:stretchColumns="*"
		app:layout_constraintEnd_toStartOf="@+id/imageViewRight"
		app:layout_constraintStart_toEndOf="@+id/imageViewLeft"
		app:layout_constraintTop_toBottomOf="@+id/textViewMenu">

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/textViewPoke"
				android:layout_width="match_parent"
				android:layout_height="23dp"
				android:background="@drawable/custom_text_view_shape_view_pager"
				android:text="@string/Poke"
				android:textAlignment="center"
				android:textColor="@color/black"
				android:textSize="12sp" />

			<TextView
				android:id="@+id/textViewSoups"
				android:layout_width="match_parent"
				android:layout_height="23dp"
				android:layout_marginEnd="12dp"
				android:layout_marginStart="12dp"
				android:background="@drawable/custom_text_view_shape_view_pager"
				android:text="@string/Soups"
				android:textAlignment="center"
				android:textColor="@color/black"
				android:textSize="12sp" />

			<TextView
				android:id="@+id/textViewMain_dishes"
				android:layout_width="match_parent"
				android:layout_height="23dp"
				android:background="@drawable/custom_text_view_shape_view_pager"
				android:text="@string/Main_Dishes"
				android:textAlignment="center"
				android:textColor="@color/black"
				android:textSize="12sp" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginBottom="9dp"
			android:layout_marginTop="9dp">

			<TextView
				android:id="@+id/textViewSalads"
				android:layout_width="match_parent"
				android:layout_height="23dp"
				android:background="@drawable/custom_text_view_shape_view_pager"
				android:text="@string/Salads"
				android:textAlignment="center"
				android:textColor="@color/black"
				android:textSize="12sp" />

			<TextView
				android:id="@+id/textViewSnacks"
				android:layout_width="match_parent"
				android:layout_height="23dp"
				android:layout_marginEnd="12dp"
				android:layout_marginStart="12dp"
				android:background="@drawable/custom_text_view_shape_view_pager"
				android:text="@string/Snacks"
				android:textAlignment="center"
				android:textColor="@color/black"
				android:textSize="12sp" />

			<TextView
				android:id="@+id/textViewWok"
				android:layout_width="match_parent"
				android:layout_height="23dp"
				android:background="@drawable/custom_text_view_shape_view_pager"
				android:text="@string/Wok"
				android:textAlignment="center"
				android:textColor="@color/black"
				android:textSize="12sp" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/textViewSauces"
				android:layout_width="match_parent"
				android:layout_height="23dp"
				android:background="@drawable/custom_text_view_shape_view_pager"
				android:text="@string/Sauces"
				android:textAlignment="center"
				android:textColor="@color/black"
				android:textSize="12sp" />

			<TextView
				android:id="@+id/textViewDesserts"
				android:layout_width="match_parent"
				android:layout_height="23dp"
				android:layout_marginEnd="12dp"
				android:layout_marginStart="12dp"
				android:background="@drawable/custom_text_view_shape_view_pager"
				android:text="@string/Desserts"
				android:textAlignment="center"
				android:textColor="@color/black"
				android:textSize="12sp" />

			<TextView
				android:id="@+id/textViewDrinks"
				android:layout_width="match_parent"
				android:layout_height="23dp"
				android:background="@drawable/custom_text_view_shape_view_pager"
				android:text="@string/Drinks"
				android:textAlignment="center"
				android:textColor="@color/black"
				android:textSize="12sp" />
		</TableRow>

	</TableLayout>

	<ImageView
		android:id="@+id/imageViewLeft"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="7dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/ic_left" />

	<ImageView
		android:id="@+id/imageViewRight"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="7dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/ic_right" />

</androidx.constraintlayout.widget.ConstraintLayout>