<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/custom_view_pager_shape"
	tools:ignore="ContentDescription">

	<TextView
		android:id="@+id/textViewMenu"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="22dp"
		android:layout_marginTop="11dp"
		android:text="@string/Menu"
		android:textColor="@color/black"
		android:textSize="16sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TableLayout
		android:id="@+id/tableLayout"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="25dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="5dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/imageViewLeft"
		app:layout_constraintTop_toBottomOf="@+id/textViewMenu"
		android:stretchColumns="*">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/textAverage_Rating"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="10dp"
				android:text="@string/Average_Rating"
				android:textColor="@color/black"
				android:textSize="12sp" />

			<TextView
				android:id="@+id/textViewAverage_Rating"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/black"
				android:textSize="12sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginBottom="9dp"
			android:layout_marginTop="9dp"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/textNumber_Of_Reviews"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="10dp"
				android:text="@string/Number_Of_Reviews"
				android:textColor="@color/black"
				android:textSize="12sp" />

			<TextView
				android:id="@+id/textViewNumber_Of_Reviews"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/black"
				android:textSize="12sp" />
		</LinearLayout>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/textViewAll"
				android:layout_width="match_parent"
				android:layout_height="23dp"
				android:background="@drawable/custom_text_view_shape_view_pager"
				android:text="@string/All"
				android:textAlignment="center"
				android:textColor="@color/black"
				android:textSize="12sp" />

			<TextView
				android:id="@+id/textViewPositive"
				android:layout_width="match_parent"
				android:layout_height="23dp"
				android:layout_marginEnd="12dp"
				android:layout_marginStart="12dp"
				android:background="@drawable/custom_text_view_shape_view_pager"
				android:text="@string/Positive"
				android:textAlignment="center"
				android:textColor="@color/black"
				android:textSize="12sp" />

			<TextView
				android:id="@+id/textViewNegative"
				android:layout_width="match_parent"
				android:layout_height="23dp"
				android:background="@drawable/custom_text_view_shape_view_pager"
				android:text="@string/Negative"
				android:textAlignment="center"
				android:textColor="@color/black"
				android:textSize="12sp" />
		</TableRow>

	</TableLayout>

	<ImageView
		android:id="@+id/imageViewLeft"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="7dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/ic_left" />


</androidx.constraintlayout.widget.ConstraintLayout>